--- a/views/profile.mustache
+++ b/views/profile.mustache
@@ -6,16 +6,20 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
 </head>
+<header>
+  <h1>Gabble</h1>
+  <nav>
+    <a href="./profile">{{username}}'s Profile</a>
+    <a href="./post">Create A Post</a>
+    <a href="./likes">Daily Likes</a>
+  </nav>
+</header>
+<hr>
 <body>
   <form action="/logout" method="get">
     <h1>Hello, {{username}}</h1>
     <button type="submit" name="logout">Log Out</button>
     <h2>Welcome Home</h2>
   </form>
-  <nav>
-    <a href="./profile.mustache">{{username}}'s Profile</a>
-    <a href="./posts.mustache">{{username}} Posts</a>
-    <a href="./.mustache">Searc</a>
-  </nav>
 </body>
 </html>
